update swager docs
